--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,17 +1,33 @@
-server.port=${port:8080}
+#server.port=${port:8080}
+#
+#spring.datasource.url=jdbc:mysql://localhost:3306/blog_personal
+#spring.datasource.username=root
+#spring.datasource.password=123456
+#
+#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+#spring.jpa.properties.hibernate.id.new_generator_mappings = false
+#spring.jpa.properties.hibernate.format_sql = true
+#spring.jpa.generate-ddl=true
+#spring.jpa.properties.hibernate.hb2dll.auto = update
+#
+#logging.level.org.hibernate.SQL=DEBUG
+#logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+#
+#spring.social.facebook.appId=616714045527311
+#spring.social.facebook.appSecret=562fbf9241db7c4ad1b54960c1f10a7c
 
-spring.datasource.url=jdbc:mysql://localhost:3306/blog_personal
+spring.datasource.url=jdbc:mysql://localhost:3306/blog_personal?useUnicode=yes&characterEncoding=utf-8
 spring.datasource.username=root
 spring.datasource.password=123456
+spring.http.encoding.charset=UTF-8
+spring.http.encoding.enabled=true
+spring.http.encoding.force=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jooq.sql-dialect=org.hibernate.dialect.MySQL5Dialect
+spring.jpa.properties.hibernate.implicit_naming_strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyHbmImpl
+spring.jpa.properties.hibernate.physical_naming_strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+spring.jpa.properties.javax.persistence.validation.mode=none
+spring.thymeleaf.encoding=utf-8
 
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
-spring.jpa.properties.hibernate.id.new_generator_mappings = false
-spring.jpa.properties.hibernate.format_sql = true
-spring.jpa.generate-ddl=true
-spring.jpa.properties.hibernate.hb2dll.auto = update
-
-logging.level.org.hibernate.SQL=DEBUG
-logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
-
-spring.social.facebook.appId=616714045527311
-spring.social.facebook.appSecret=562fbf9241db7c4ad1b54960c1f10a7c
+grokonez.app.jwtSecret=jwtGrokonezSecretKey
+grokonez.app.jwtExpiration=86400
