create comment model

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,9 +9,10 @@
 #spring.jpa.properties.hibernate.format_sql = true
 #spring.jpa.generate-ddl=true
 #spring.jpa.properties.hibernate.hb2dll.auto = update
-#
+##
 #logging.level.org.hibernate.SQL=DEBUG
 #logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+#spring.main.web-application-type=none
 #
 #spring.social.facebook.appId=616714045527311
 #spring.social.facebook.appSecret=562fbf9241db7c4ad1b54960c1f10a7c
@@ -26,7 +27,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jooq.sql-dialect=org.hibernate.dialect.MySQL5Dialect
 spring.jpa.properties.hibernate.implicit_naming_strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyHbmImpl
 spring.jpa.properties.hibernate.physical_naming_strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
-spring.jpa.properties.javax.persistence.validation.mode=none
+#spring.jpa.properties.javax.persistence.validation.mode=none
 spring.thymeleaf.encoding=utf-8
 
 grokonez.app.jwtSecret=jwtGrokonezSecretKey
